--- a/references.bib
+++ b/references.bib
@@ -2787,6 +2787,7 @@
 
 @misc{webgl2025,
 	title = {{WebGL: 2D and 3D graphics for the web - Web APIs {$\vert$} MDN}},
+	author = {{MDN}},
 	journal = {MDN Web Docs},
 	year = {2025},
 	month = mar,
